--- a/arch/arm64/boot/dts/qcom/msm8916.dtsi
+++ b/arch/arm64/boot/dts/qcom/msm8916.dtsi
@@ -114,6 +114,8 @@
 			clocks = <&apcs 0>;
 			operating-points-v2 = <&cpu_opp_table>;
 			#cooling-cells = <2>;
+			clock-latency = <200000>;
+			cpu-supply = <&pm8916_spmi_s2>;
 		};
 
 		CPU1: cpu@1 {
@@ -126,6 +128,8 @@
 			clocks = <&apcs 0>;
 			operating-points-v2 = <&cpu_opp_table>;
 			#cooling-cells = <2>;
+			clock-latency = <200000>;
+			cpu-supply = <&pm8916_spmi_s2>;
 		};
 
 		CPU2: cpu@2 {
@@ -138,6 +142,8 @@
 			clocks = <&apcs 0>;
 			operating-points-v2 = <&cpu_opp_table>;
 			#cooling-cells = <2>;
+			clock-latency = <200000>;
+			cpu-supply = <&pm8916_spmi_s2>;
 		};
 
 		CPU3: cpu@3 {
@@ -150,6 +156,8 @@
 			clocks = <&apcs 0>;
 			operating-points-v2 = <&cpu_opp_table>;
 			#cooling-cells = <2>;
+			clock-latency = <200000>;
+			cpu-supply = <&pm8916_spmi_s2>;
 		};
 
 		L2_0: l2-cache {
