--- a/arch/arm64/boot/dts/qcom/msm8916.dtsi
+++ b/arch/arm64/boot/dts/qcom/msm8916.dtsi
@@ -116,6 +116,9 @@
 			#cooling-cells = <2>;
 			clock-latency = <200000>;
 			cpu-supply = <&pm8916_spmi_s2>;
+			/* cooling options */
+			cooling-min-level = <0>;
+			cooling-max-level = <7>;
 		};
 
 		CPU1: cpu@1 {
@@ -130,6 +133,9 @@
 			#cooling-cells = <2>;
 			clock-latency = <200000>;
 			cpu-supply = <&pm8916_spmi_s2>;
+			/* cooling options */
+			cooling-min-level = <0>;
+			cooling-max-level = <7>;
 		};
 
 		CPU2: cpu@2 {
@@ -144,6 +150,9 @@
 			#cooling-cells = <2>;
 			clock-latency = <200000>;
 			cpu-supply = <&pm8916_spmi_s2>;
+			/* cooling options */
+			cooling-min-level = <0>;
+			cooling-max-level = <7>;
 		};
 
 		CPU3: cpu@3 {
@@ -158,6 +167,9 @@
 			#cooling-cells = <2>;
 			clock-latency = <200000>;
 			cpu-supply = <&pm8916_spmi_s2>;
+			/* cooling options */
+			cooling-min-level = <0>;
+			cooling-max-level = <7>;
 		};
 
 		L2_0: l2-cache {
